--- a/res/css/newsEdit.css
+++ b/res/css/newsEdit.css
@@ -67,8 +67,7 @@ section.new-post-main-container {
 	line-height: 56px;
 }
 
-.new-article #post-title:focus,
-.new-article #post-content-edit:focus {
+.new-article #post-title:focus {
 	border-color: #4FC3F7;
 }
 
@@ -141,23 +140,6 @@ section.new-post-main-container {
 
 .articleEditImg {
 	width: 840px;
-}
-
-.new-article #post-content-edit {
-    outline: none;
-    width: 100%;
-    max-width: 100%;
-    fmin-height: 360px;
-    padding: 30px;
-    font-size: 18px;
-	line-height: 30px;
-    color: #333;
-    font-family: Roboto, sans-serif;
-    margin: 15px 0;
-    background: #fff;
-    border: 1px solid #E0E0E0;
-	border-radius: 2px;
-	box-sizing: border-box;
 }
 
 .new-article #post-source-name,
@@ -234,106 +216,214 @@ input#saveEditPost:hover {
 	border: 2px solid white;
 }
 
-/* Modal 
 
-.editSourceModalOverlay {
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	background: rgba(0, 0, 0, 0.5);
-	display: none;
-	top: 0;
-	left: 0;
-	z-index: 999;
+
+/* ========== Text editor ========== */
+
+#quill-container {
+	height: auto;
+	min-height: 264px;
+	padding: 18px 15px;
 }
 
-.editSourceModal {
-	background: #fff;
-	max-width: 420px;
-	width: 100%;
-	height: 240px;
+#quill-container p {
+	margin: 0 0 25px 0;
+	font-size: 18px;
+	line-height: 30px;
+	color: #333;
+}
+
+#quill-container p:last-child {
+	margin: 0;
+}
+
+.ql-editor .ql-video {
+	width: 778px;
+	height: 438px;
+	margin-bottom: 25px;
+}
+
+.ql-snow .ql-editor blockquote {
+	margin-bottom: 0;
+	margin-top: 0;
+	margin: 0 0 25px 0;
+	font-size: 18px;
+	line-height: 30px;
+	color: rgba(0, 0, 0, 0.64);
+}
+
+.ql-snow a {
+	color: #03A9F4;
+}
+
+.ql-snow .ql-editor a {
+	text-decoration: none;
+	color: #03A9F4;
+	cursor: pointer;
+}
+
+#quill-container .ql-editor {
+	font-family: 'Roboto', sans-serif;
+}
+
+.ql-editor.ql-blank {
+	min-height: 200px;
+}
+
+.ql-editor.ql-blank::before {
+	color: #a9a9a9;
+	content: attr(data-placeholder);
+	font-style: normal;
+	pointer-events: none;
 	position: absolute;
-	top: 0;
-	bottom: 0;
-	right: 0;
-	left: 0;
-	margin: auto;
-	-webkit-box-shadow: 0 -2px 25px 0 rgba(0, 0, 0, 0.15), 0 13px 25px 0 rgba(0, 0, 0, 0.3);
+	font-size: 19px;
+	font-family: Roboto, sans-serif;
+}
+
+.ql-snow .ql-picker.ql-expanded .ql-picker-options {
+	margin-top: 6px;
+	padding: 5px;
+}
+
+.ql-toolbar.ql-snow .ql-picker.ql-expanded .ql-picker-label {
+	border-color: #fff;
+}
+
+.ql-snow .ql-color-picker.ql-color .ql-picker-item {
+	border-radius: 20px;
+}
+
+.ql-toolbar.ql-snow .ql-picker-options {
+	box-shadow: 0px 0px 5px #ddd;
+}
+
+.ql-snow .ql-color-picker .ql-picker-options {
+	width: 180px;
+}
+
+.ql-toolbar.ql-snow .ql-color-picker .ql-picker-item.ql-selected,
+.ql-toolbar.ql-snow .ql-color-picker .ql-picker-item:hover {
+	border-color: rgba(255, 255, 255, 0.64);
+	border-width: 2px;
+}
+
+.ql-toolbar.ql-snow {
+	border: none;
+	box-sizing: border-box;
+	font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+	border-bottom: 1px solid #eaeaea;
+	padding: 12px;
+	padding-left: 24px;
+}
+
+.ql-snow .ql-tooltip {
+	padding: 9px 16px;
 	border-radius: 2px;
 }
 
-.modal h1 {
-	margin: 0;
-	padding: 24px 24px 20px 24px;
-	font-size: 20px;
-	font-weight: 500;
+.ql-snow .ql-tooltip input[type=text] {
+	border: 1px solid #e0e0e0;
+	height: 28px;
+	padding: 4px 8px;
+	width: 180px;
+	margin: 0 6px;
 }
 
-.modal .modalContainer {
-	padding: 0 24px 24px 24px;
+.ql-snow .ql-tooltip a.ql-action::after {
+	margin-right: 8px;
+	margin-left: 8px;
 }
 
-.editSourceModal.modal .modalContainer input {
-	display: block;
-	width: 100%;
-	margin-bottom: 12px;
-	outline: none;
-	height: 39px;
-	font-family: Roboto, sans-serif;
-	color: #03A9F4;
-	padding-left: 15px;
-	background: #fff;
+.ql-snow .ql-tooltip a.ql-preview {
+	margin-right: 8px;
+}
+
+.ql-snow .ql-tooltip a {
+	display: inline-block;
+	box-sizing: border-box;
+	margin-left: 8px;
+}
+
+.ql-snow .ql-tooltip a.ql-remove::before {
+	margin-left: -8px;
+}
+
+.ql-snow .ql-color-picker .ql-picker-item {
+	margin: 4px;
+}
+
+.ql-container.ql-snow {
+	border: none;
+}
+
+
+/*  Editor Container  */
+
+.editContentContainer {
+	max-width: 840px;
+	margin: 0 auto;
 	border: 1px solid #E0E0E0;
 	border-radius: 2px;
-	font-size: 14px;
-	box-sizing: border-box;
+	margin-bottom: 24px;
+	margin-top: 18px;
+	position: relative;
 }
 
-.modal .modalFooter {
-	width: 100%;
+
+
+/* ========== Info popup (tooltip) ========== */
+
+.editContentHelp {
+	height: 20px;
+	width: 20px;
 	position: absolute;
-	bottom: 0;
-	text-align: right;
-	height: 52px;
-	box-sizing: border-box;
-	padding-right: 8px;
-}
-
-.modal .modalFooter .modalActionBtn {
-	display: inline-block;
-	height: 36px;
-	margin-top: 8px;
-	line-height: 37px;
-	margin-left: 4px;
-	min-width: 64px;
-	text-align: center;
-	padding: 0 8px;
-	box-sizing: border-box;
-	text-transform: uppercase;
-	font-size: 14px;
-	font-weight: 500;
-	color: #29d3e8;
+	right: 13px;
+	top: 13px;
+	color: #FFC107;
 	cursor: pointer;
-	border-radius: 2px;
-	-webkit-transition: all 200ms ease-in-out;
-	-moz-transition: all 200ms ease-in-out;
-	-ms-transition: all 200ms ease-in-out;
-	-o-transition: all 200ms ease-in-out;
-	transition: all 200ms ease-in-out;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none; 
 }
 
-.modal .modalFooter .modalActionBtn:hover {
-	background: rgba(0, 0, 0, 0.06);
+.editContentHelp i {
+	font-size: 20px;
 }
 
-.modal .modalFooter .modalActionBtn:active {
-	background: rgba(0, 0, 0, 0.2);
-	color: #0097A7;
-}*/
+[data-tooltip]:before {
+    position: absolute;
+    top: 26px;
+    margin-top: 5px;
+    margin-left: -192px;
+    padding: 10px 16px;
+    width: 184px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 3px;
+    background-color: #212121;
+    color: #9E9E9E;
+    content: attr(data-tooltip);
+    font-size: 14px;
+    line-height: 20px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+[data-tooltip]:before, [data-tooltip]:after {
+	visibility: hidden;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+	filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=0);
+	opacity: 0;
+	pointer-events: none;
+}
+
+[data-tooltip]:hover:before, [data-tooltip]:hover:after {
+	visibility: visible;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+	filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=100);
+	opacity: 1;
+}
+
+[data-tooltip] {
+	z-index: 2;
+	cursor: pointer;
+}
 
 
 
@@ -380,6 +470,11 @@ input#saveEditPost:hover {
 
 @media screen and (max-width: 600px) {
 	
+	header .cancel-post {
+		line-height: 56px;
+		height: 56px;
+	}
+	
 	.new-article #post-content-edit {
 		padding: 16px;
 	}
@@ -391,6 +486,12 @@ input#saveEditPost:hover {
 	
 	section.new-post-main-container {
 		padding-bottom: 64px;
+		margin-top: 70px;
+	}
+	
+	.ql-toolbar.ql-snow .ql-formats {
+		margin-bottom: 3px;
+		margin-top: 3px;
 	}
 	
 }
