--- a/res/css/newPost.css
+++ b/res/css/newPost.css
@@ -81,6 +81,10 @@ section.new-post-main-container h1 {
 	color: #9E9E9E;
 }
 
+.new-article .post-tags-label {
+	padding: 0 4px;
+}
+
 .new-article #post-author,
 .new-article #post-tags {
 	font-family: Roboto, sans-serif;
@@ -102,24 +106,35 @@ section.new-post-main-container h1 {
 }
 
 .addTagsBtn {
-	display: inline-block;
-	text-transform: uppercase;
-	font-size: 14px;
-	padding: 10px 16px;
-	color: #4fc3f7;
-	font-weight: 500;
-	margin-left: 8px;
-	border-radius: 2px;
+	color: #fff;
+	background: #4FC3F7;
+	padding: 6px 12px;
+	margin-left: 6px;
+	border-radius: 30px;
 	-webkit-transition: all 150ms ease-in-out;
 	-moz-transition: all 150ms ease-in-out;
 	-ms-transition: all 150ms ease-in-out;
 	-o-transition: all 150ms ease-in-out;
 	transition: all 150ms ease-in-out;
+	font-size: 14px;
+	position: relative;
+	padding-right: 36px;
+	text-transform: capitalize;
+	cursor: pointer;
+	display: inline-block;
+	font-weight: 500;
+}
+
+.addTagsBtn i {
+	font-size: 20px;
+	position: absolute;
+	top: 4px;
+	right: 4px;
 }
 
 .addTagsBtn:hover {
-    background: rgba(100, 199, 243, 0.12);
-    cursor: pointer;
+	box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+	background: #29B6F6;
 }
 
 .new-article #post-source-name,
@@ -178,7 +193,7 @@ section.new-post-main-container h1 {
 	border-radius: 2px;
 	padding: 0 24px;
 	text-transform: uppercase;
-	border: 1px dashed #eaeaea;
+	border: 1px dashed #E0E0E0;
 }
 
 .new-article label.post-img-label input {
