--- a/res/css/style.css
+++ b/res/css/style.css
@@ -180,15 +180,46 @@ body {
     margin: 13px 24px;
 }
 
+
+/* Responsive */
+
+.responsiveNav {
+	display: none;
+}
+
+.hamburgerButton {
+    background: transparent;
+    cursor: pointer;
+    border: 0;
+    display: block;
+    height: 48px;
+    overflow: hidden;
+    top: 4px;
+	left: 4px;
+    width: 48px;
+    position: fixed;
+	outline: none;
+}
+
+.respLogo {
+	display: none;
+}
+
+.hamburgerButton i {
+    color: #fff;
+    width: 24px;
+    vertical-align: middle;
+}
+
 .resp-name-logo {
     display: none;
     position: absolute;
     height: 56px;
     width: 100%;
     line-height: 56px;
-    padding-left: 60px;
+    padding-left: 56px;
     color: #fff;
-    font-size: 22px;
+    font-size: 18px;
     font-weight: 500;
 }
 
@@ -219,7 +250,6 @@ body {
     text-decoration: none;
     outline: none;
     font-weight: 500;
-    /*font-family: Roboto medium;*/
     display: inline-block;
     line-height: 60px;
     padding: 0 24px;
@@ -227,14 +257,15 @@ body {
 }
 
 .responsive-menu-overlay {
-    display: none;
-    background-color: #000;
-    height: 100%;
-    width: 100%;
-    position: fixed;
-    z-index: 9;
-    opacity: .5;
-    margin-top: -1px;
+	display: none;
+	background-color: #000;
+	height: 100%;
+	width: 100%;
+	position: fixed;
+	opacity: .5;
+	top: 0;
+	left: 0;
+	z-index: 99;
 }
 
 .resp-menu-ico {
@@ -339,36 +370,59 @@ body {
     }
 
     .header-menu {
-        background-color: #eee;
+        background-color: #fff;
         height: 100%;
-        width: 280px;
+        width: 256px;
         position: fixed;
-        margin-top: 56px;
         margin-left: -280px;
         -webkit-transition: all 200ms linear;
         -moz-transition: all 200ms linear;
         -ms-transition: all 200ms linear;
         -o-transition: all 200ms linear;
         transition: all 200ms linear;
+		border-right: 1px solid rgba(0,0,0,.14);
     }
+	
+	.responsiveNav {
+		display: block;
+	}
+	
+	.respLogo {
+		display: block;
+		background: white;
+		height: 56px;
+		width: 100%;
+		border-bottom: 1px solid #e0e0e0;
+		box-sizing: border-box;
+		padding: 12px 0 11px 24px;
+	}
+	
+	.respLogo img {
+		max-width: 185px;
+		height: 32px;
+	}
     
     .header-menu ul {
         float: none;
-        padding-left: 0;
+		padding: 12px 0;
     }
         
     .header-menu ul li {
         display: block;
-        width: calc(100% - 30px);
-        padding-left: 30px;
+        width: 100%;
+		height: 48px;
+		line-height: 48px;
     }
     
     .header-menu ul li:hover {
-        background-color: #ccc;
+        background-color: #eee;
     }
     
     .header-menu ul li a {
-        color: #333;
+		color: #333;
+		line-height: 48px;
+		width: 100%;
+		text-transform: none;
     }
     
     .resp-menu-ico,
@@ -384,14 +438,26 @@ body {
     /* footer */
     
     .page-footer {
-        height: 64px;
         color: #9FA5A9;
     }
     
     .page-footer .copyright {
-        line-height: 64px;
         text-align: center;
-        margin-right: 0;
+		margin-right: 0;
+		margin-top: 14px;
+		line-height: 18px;
+		font-size: 10px;
     }
+	
+	.copyright,
+	.footerLinks {
+		width: 100%;
+	}
+	
+	.page-footer .footerLinks {
+		text-align: center;
+		margin-top: 12px;
+		font-size: 12px;
+	}
 
 }
