initial structure for the Login and New Account pages (WIP)

--- a/res/css/style.css
+++ b/res/css/style.css
@@ -37,6 +37,16 @@ body {
 }
 
 
+/* Disable selection with class "noUserSelect" */
+
+.noUserSelect {
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
+
 
 /* ========== Page loader ========== */
 
