--- a/res/css/style.css
+++ b/res/css/style.css
@@ -305,6 +305,68 @@ body {
 
 
 
+/* ========== Search bar (header) ========== */
+
+.searchBarMain {
+	background: #fff;
+	width: 80%;
+	max-width: 680px;
+	margin: 0 auto;
+	height: 42px;
+	margin-top: 11px;
+	border-radius: 2px;
+	box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.14);
+	-webkit-transition: all 0.2s ease-in-out;
+	-moz-transition: all 0.2s ease-in-out;
+	-ms-transition: all 0.2s ease-in-out;
+	-o-transition: all 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
+	position: fixed;
+	left: 0;
+	right: 0;
+	top: 0
+}
+
+.searchBarMain i.searchBarSearchIcon {
+	height: 100%;
+	line-height: 42px;
+	float: left;
+	width: 52px;
+	text-align: center;
+	color: rgba(68, 68, 68, 0.5);
+}
+
+.searchBarMain input#searchBarInput {
+	height: 42px;
+	padding: 0;
+	margin: 0;
+	border: 0;
+	box-sizing: border-box;
+	background: transparent;
+	width: calc(100% - 52px);
+	outline: none;
+	padding-right: 32px;
+	font-size: 16px;
+	color: rgba(0, 0, 0, 0.76);
+	font-weight: 400;
+	font-family: 'Roboto', sans-serif;
+}
+
+.searchBarMain i.clearSearchBarField {
+	position: absolute;
+	right: 12px;
+	top: 11px;
+	color: rgba(0, 0, 0, 0.84);
+	display: none;
+	font-size: 20px;
+}
+
+.searchBarMain i.clearSearchBarField:hover {
+	cursor: pointer;
+}
+
+
+
 /* ========== Cards structure ========== */
 
 .card {
@@ -369,6 +431,14 @@ body {
 
 
 /* ========== Media Queries ========== */
+
+@media screen and (max-width: 1280px) {
+	
+	.searchBarMain {
+		display: none; /* MAKE IT RESPONSIVE!!! */
+	}
+	
+}
 
 @media screen and (max-width: 840px) {
 
