--- a/res/css/profile.css
+++ b/res/css/profile.css
@@ -87,28 +87,12 @@ i.material-icons.profileMenuIcon:hover {
 	color: rgba(0, 0, 0, 0.32);
 }
 
-.profileEmail {
+.profileUserStatus {
 	font-size: 14px;
 	color: rgba(255, 255, 255, 0.36);
 	padding: 0 16px;
 	padding-top: 4px;
 }
-
-/*.editProfileBtn {
-	height: 36px;
-	line-height: 37px;
-	padding: 0 24px;
-	border-radius: 2px;
-	text-transform: uppercase;
-	font-size: 14px;
-	font-weight: 500;
-	color: #FFC107;
-	background: rgba(255, 255, 255, 0.12);
-	display: inline-block;
-	margin: 16px;
-	cursor: pointer;
-	margin-top: 24px;
-}*/
 
 
 
