--- a/res/css/profile.css
+++ b/res/css/profile.css
@@ -240,6 +240,9 @@ input[type="radio"][name="tabs"]:first-of-type:checked ~ .slide {
 	padding-top: 16px;
 }
 
+
+/* Tab 1 */
+
 .feedHighlightsSection,
 .feedTrendingSection {
 	min-height: 200px;
@@ -289,6 +292,108 @@ input[type="radio"][name="tabs"]:first-of-type:checked ~ .slide {
 
 .feedArticlesContainer {
 	width: 100%;
+}
+
+
+/* Tab 1 */
+
+.contributorPanelMain {
+	width: 100%;
+	height: 52px;
+	position: relative;
+}
+
+.myArticlesMenuTrigger,
+.myArticlesMenuTrigger .triggerLabelSelection,
+.myArticlesMenuTrigger i {
+	display: inline-block;
+}
+
+.myArticlesMenuTrigger {
+	font-size: 16px;
+	color: rgba(0, 0, 0, 0.54);
+	display: inline-block;
+	height: 52px;
+	padding: 0 16px;
+	cursor: pointer;
+	border-radius: 2px;
+}
+
+.myArticlesMenuTrigger .triggerLabelSelection {
+	height: 52px;
+	float: left;
+	line-height: 52px;
+}
+
+.myArticlesMenuTrigger i {
+    height: 52px;
+    float: left;
+    line-height: 52px;
+    padding-left: 5px;
+}
+
+.myArticlesMenu {
+	position: absolute;
+	z-index: 999;
+	background: #fff;
+	top: -6px;
+	left: -8px;
+	padding: 8px 0;
+	max-height: 340px;
+	min-width: 200px;
+	overflow: auto;
+	border-radius: 2px;
+	box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+	text-align: left;
+	display: none;
+}
+
+.myArticlesMenu .myArticlesMenuItem {
+	height: 48px;
+	padding: 0 24px;
+	font-size: 16px;
+	color: rgba(0, 0, 0, 0.84);
+	box-sizing: border-box;
+	line-height: 48px;
+	cursor: pointer;
+}
+
+.myArticlesMenu .myArticlesMenuItem:hover {
+	background: #eee;
+}
+
+.contributorPanelMain .newArticleBtn {
+	float: right;
+	text-decoration: none;
+}
+
+.contributorPanelMain .newArticleBtn div {
+	margin-top: 8px;
+	margin-right: 8px;
+	font-family: 'Roboto', sans-serif;
+	border: none;
+	outline: none;
+	background-color: #29d3e8;
+	height: 36px;
+	line-height: 37px;
+	padding: 0 24px;
+	color: #fff;
+	border-radius: 2px;
+	font-weight: 500;
+	text-transform: uppercase;
+	font-size: 14px;
+	cursor: pointer;
+	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
+	-webkit-transition: all 200ms ease-in-out;
+	-moz-transition: all 200ms ease-in-out;
+	-ms-transition: all 200ms ease-in-out;
+	-o-transition: all 200ms ease-in-out;
+	transition: all 200ms ease-in-out;
+}
+
+.contributorPanelMain .newArticleBtn div:hover {
+	box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+	background: #00BCD4;
 }
 
 
